feat: :sparkles: add assets and vscode setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
         "chula",
+        "getvaccine",
         "Rajavithi",
         "stardew",
-        "Thammasat"
+        "Thammasat",
+        "Vlog"
     ]
 }
