feat: :sparkles: update workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "chula",
         "getvaccine",
+        "postalcode",
         "Rajavithi",
         "stardew",
         "Thammasat",
