feat: :sparkles: update workspace setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "getvaccine",
         "postalcode",
         "Rajavithi",
+        "signin",
+        "signout",
         "stardew",
         "Thammasat",
         "Vlog"
