feat: :sparkles: update workspace setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "chula",
         "getvaccine",
+        "mybooking",
         "postalcode",
         "Rajavithi",
         "signin",
