feat: :sparkles: update workspace setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,26 @@
 {
     "cSpell.words": [
         "chula",
+        "Dusit",
         "getvaccine",
+        "Khlong",
+        "Luang",
         "mybooking",
+        "Nueng",
+        "Pathum",
+        "Phaholyothin",
+        "Phaya",
         "postalcode",
         "Rajavithi",
+        "Ratchathewi",
+        "Samsen",
         "signin",
         "signout",
         "stardew",
         "Thammasat",
+        "Thani",
+        "Thung",
+        "Vajira",
         "Vlog"
     ]
 }
